fix(plugin): make packaging a proper dependency
Instead of importing packaging with a try/except fallback, add it as
a real dependency. This removes the fallback version-parsing code in
the update command.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "marshmallow~=3.18.0",
     "marshmallow-dataclass~=8.5.8",
     "oauthlib~=3.2.1",
+    "packaging>=22.0",
     "pygitguardian~=1.28.0",
     "pyjwt~=2.6.0",
     "python-dotenv~=0.21.0",
