--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ dependencies = [
     "requests~=2.32.0",
     "rich~=12.5.1",
     "typing-extensions~=4.12.2",
-    "urllib3~=2.2.2",
+    "urllib3>=2.2.2,<3",
     "truststore>=0.10.1; python_version >= \"3.10\"",
 ]
 
@@ -63,7 +63,7 @@ build-backend = "pdm.backend"
 [tool.pdm.resolution.overrides]
 # vcrpy requires urllib3 < 2 if Python is < 3.10, but it works for us with
 # Python 3.9, so force urllib3 version.
-urllib3 = "2.2.3"
+urllib3 = ">=2.2.2"
 
 # pyinstaller limits Python version to < 3.13, making it incompatible with us
 pyinstaller = "6.7.0"
