--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ build-backend = "pdm.backend"
 [tool.pdm.resolution.overrides]
 # vcrpy requires urllib3 < 2 if Python is < 3.10, but it works for us with
 # Python 3.9, so force urllib3 version.
-urllib3 = ">=2.2.2"
+urllib3 = ">=2.2.2,<3"
 
 # pyinstaller limits Python version to < 3.13, making it incompatible with us
 pyinstaller = "6.7.0"
